<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:listDivider"
        android:dividerPadding="@dimen/root_padding"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/root_padding">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEspesorCuerpo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                app:startIconDrawable="@drawable/ic_decimal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEspesorCuerpo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/espesor_cuerpo"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEspesorTapa"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                app:startIconDrawable="@drawable/ic_decimal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEspesorTapa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/espesor_tapa"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilGanchoCuerpo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                app:startIconDrawable="@drawable/ic_decimal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGanchoCuerpo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gancho_cuerpo"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilGanchoTapa"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                app:startIconDrawable="@drawable/ic_decimal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGanchoTapa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gancho_tapa"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilAlturaCierre"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                app:startIconDrawable="@drawable/ic_decimal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAlturaCierre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/altura_cierre"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEspesorCierre"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_bottom"
                app:startIconDrawable="@drawable/ic_decimal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEspesorCierre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/espesor_cierre"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="false"
                android:text="@string/limpiar"
                app:icon="@drawable/ic_baseline_clear_all_24" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/root_padding"
            app:layout_constraintBottom_toBottomOf="@+id/tvEspacioLibre"
            app:layout_constraintTop_toBottomOf="@+id/tvEspacioLibre">

            <TextView
                android:id="@+id/txtTraslape"
                style="@style/TextAppearance.SeamCalc.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traslape"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="92dp" />

            <TextView
                android:id="@+id/txtSuperposicion"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:fontFamily="@font/open_sans"
                android:text="@string/superposicion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTraslape"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="151dp" />

            <TextView
                android:id="@+id/txtPenetracion"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/penetracion_gancho_cuerpo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtSuperposicion"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="262dp" />

            <TextView
                android:id="@+id/txtEspacioLibre"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/espacio_libre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPenetracion"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="138dp" />

            <TextView
                android:id="@+id/txtCompacidad"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:text="@string/compacidad"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEspacioLibre"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="138dp" />

            <TextView
                android:id="@+id/tvTraslape"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/cero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="10dp" />

            <TextView
                android:id="@+id/tvSuperposicion"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="end"
                android:text="@string/cero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTraslape"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="10dp" />


            <TextView
                android:id="@+id/tvPenetracion"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="end"
                android:text="@string/cero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSuperposicion"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="10dp" />


            <TextView
                android:id="@+id/tvEspacioLibre"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="end"
                android:text="@string/cero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPenetracion"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="10dp" />

            <TextView
                android:id="@+id/tvCompacidad"
                style="?textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:gravity="end"
                android:text="@string/cero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEspacioLibre"
                tools:layout_conversion_absoluteHeight="22dp"
                tools:layout_conversion_absoluteWidth="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
